# NL-LatticeBoltzmann

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.doxygen
docu/: info.md  main_page.cpp
documentation/: doxygen_how_to.md  example_python.py  main_page.cpp  plotter_contour.py
milestones/: CMakeLists.txt
milestones/00/: CMakeLists.txt  main.cpp
milestones/00a/: CMakeLists.txt  main.cpp
milestones/00b/: CMakeLists.txt  main.cpp
milestones/01/: CMakeLists.txt  main.cpp
milestones/02/: CMakeLists.txt  main.cpp
milestones/03/: CMakeLists.txt  callgrid_calculate.32430  callgrind.out.151847  callgrind.out.153074  callgrind.out.15922  callgrind.out.19723  callgrind.out.reldeb.149889  callgrind_hard_inline.7685  callgrind_hard_inline.out.43602  callgrind_with_lookup_table.6430  main.cpp
milestones/03/Callgrindouts/: callgrid_lookup_bypass_calculate.32430  callgrind_hard_inline.out.43602  callgrind_hard_inline_macro_solo.out.37093  callgrind_inline.out.7685  callgrind_lookup.out.6430  callgrind_original.out.49488  callgrind_with_lookup_table.6430
milestones/04/: CMakeLists.txt  main.cpp
milestones/04/Callgrinds_h/: callgrind.out.10108  callgrind.out.13172
milestones/05/: CMakeLists.txt  main.cpp
milestones/05/callgrinds_a/: callgrind_[]_streaming.12149  callgrind_at_streaming.6799
milestones/06/: CMakeLists.txt  main.cpp  one_step_opti.38400
milestones/06a/: CMakeLists.txt  main.cpp
milestones/06b/: CMakeLists.txt  callgrind.out.30586  main.cpp
milestones/07/: CMakeLists.txt  main.cpp
milestones/08/: CMakeLists.txt  main.cpp
milestones/09/: CMakeLists.txt  main.cpp
milestones/10/: CMakeLists.txt  main.cpp
milestones/11/: CMakeLists.txt  main.cpp
milestones/11a/: CMakeLists.txt  main.cpp
milestones/11b/: CMakeLists.txt  main.cpp
milestones/12/: CMakeLists.txt  main.cpp
milestones/14/: CMakeLists.txt  main.cpp
milestones/15/: CMakeLists.txt  main.cpp
milestones/15a/: CMakeLists.txt  main.cpp
simulation/: CMakeLists.txt  lbm_simulation.cpp  lbm_simulation.h  one_step_simulation.cpp  one_step_simulation.h  simulation.cpp  simulation.h  two_step_simulation.cpp  two_step_simulation.h
src/: CMakeLists.txt  bmp.cpp  bmp.h  boundary_point_generator.cpp  boundary_point_generator.h  draw_image_surface.cpp  draw_image_surface.h.cpp  drawn_image_surface.h  forced_simulation.cpp  forced_simulation.h  forces.cpp  forces.h  functions.cpp  functions.h  helper_classes.cpp  helper_classes.h  helper_functions.cpp  helper_functions.h  image_converter.cpp  image_converter.h  lattice_boltzmann.cpp  lattice_boltzmann.h  lookup_table.cpp  lookup_table.h  marker.cpp  marker.h  neighborhood.cpp  neighborhood.h  node.cpp  node.h  nodeGenerator.cpp  nodeGenerator.h  node_generator.cpp  node_generator.h  simulation.cpp  simulation.h  straight.cpp  straight.h  types.cpp  types.h
src/src_foreign/: spline.h
tests/: CMakeLists.txt  add_misc_test.cpp  bb_stream_tests.cpp  extra_tests.cpp  init_test.cpp  init_tests.cpp  misc_tests.cpp  misc_tests_1.cpp  misc_tests_2.cpp  misc_tests_3.cpp  misc_tests_4.cpp  stream_tests.cpp  test_hello_world.cpp
